# storage/api-docs/api-docs.json
@@ -666,6 +666,36 @@
                 ]
             }
         },
+        "/api/ping": {
+            "get": {
+                "tags": [
+                    "HealthCheck"
+                ],
+                "summary": "health`s check",
+                "operationId": "62cf4bc8b6220d316ab13b54737911c1",
+                "responses": {
+                    "200": {
+                        "description": "Solicitud exitosa",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "pong!!"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Error interno del servidor"
+                    }
+                }
+            }
+        },
         "/api/roles": {
             "get": {
                 "tags": [
